评论页面逻辑（用静态页面调试JS）

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -145,85 +145,90 @@
 
             </div>
             <!--留言区域-->
-            <div id="comment-container" class="ui bottom attached segment">
-                <div class="ui teal segment">
-                    <div class="ui comments">
-                        <h3 class="ui dividing header">Comments</h3>
-                        <div class="comment">
-                            <a class="avatar" one-link-mark="yes">
-                                <img src="http://lorempixel.com/100/100/">
-                            </a>
-                            <div class="content">
-                                <a class="author" one-link-mark="yes">Matt</a>
-                                <div class="metadata">
-                                    <span class="date">Today at 5:42PM</span>
-                                </div>
-                                <div class="text">
-                                    How artistic!
-                                </div>
-                                <div class="actions">
-                                    <a class="reply" one-link-mark="yes">回复</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="comment">
-                            <a class="avatar" one-link-mark="yes">
-                                <img src="http://lorempixel.com/100/100/">
-                            </a>
-                            <div class="content">
-                                <a class="author" one-link-mark="yes">Elliot Fu</a>
-                                <div class="metadata">
-                                    <span class="date">Yesterday at 12:30AM</span>
-                                </div>
-                                <div class="text">
-                                    <p>This has been very useful for my research. Thanks as well!</p>
-                                </div>
-                                <div class="actions">
-                                    <a class="reply" one-link-mark="yes">回复</a>
+            <div  class="ui bottom attached segment">
+                <!--将这个comment-container动态加载-->
+                <div id="comment-container" class="ui teal segment">
+                    <div th:fragment="commentList">
+                        <!--threaded 头像间加上连线-->
+                        <div class="ui threaded comments" style="max-width: 100%">
+                            <h3 class="ui dividing header">评论</h3>
+                            <div class="comment">
+                                <a class="avatar" one-link-mark="yes">
+                                    <img src="http://lorempixel.com/100/100/">
+                                </a>
+                                <div class="content">
+                                    <a class="author" one-link-mark="yes">Matt</a>
+                                    <div class="metadata">
+                                        <span class="date">Today at 5:42PM</span>
+                                    </div>
+                                    <div class="text">
+                                        How artistic!
+                                    </div>
+                                    <div class="actions">
+                                        <a class="reply" data-commentid="1" data-commentnickname="Matt" onclick="reply(this)" one-link-mark="yes">回复</a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="comments">
-                                <div class="comment">
-                                    <a class="avatar" one-link-mark="yes">
-                                        <img src="http://lorempixel.com/100/100/">
-                                    </a>
-                                    <div class="content">
-                                        <a class="author" one-link-mark="yes">Jenny Hess</a>
-                                        <div class="metadata">
-                                            <span class="date">Just now</span>
-                                        </div>
-                                        <div class="text">
-                                            Elliot you are always so right :)
-                                        </div>
-                                        <div class="actions">
-                                            <a class="reply" one-link-mark="yes">回复</a>
+                            <div class="comment">
+                                <a class="avatar" one-link-mark="yes">
+                                    <img src="http://lorempixel.com/100/100/">
+                                </a>
+                                <div class="content">
+                                    <a class="author" one-link-mark="yes">Elliot Fu</a>
+                                    <div class="metadata">
+                                        <span class="date">Yesterday at 12:30AM</span>
+                                    </div>
+                                    <div class="text">
+                                        <p>This has been very useful for my research. Thanks as well!</p>
+                                    </div>
+                                    <div class="actions">
+                                        <a class="reply" one-link-mark="yes">回复</a>
+                                    </div>
+                                </div>
+                                <div class="comments">
+                                    <div class="comment">
+                                        <a class="avatar" one-link-mark="yes">
+                                            <img src="http://lorempixel.com/100/100/">
+                                        </a>
+                                        <div class="content">
+                                            <a class="author" one-link-mark="yes">Jenny Hess</a>
+                                            <div class="metadata">
+                                                <span class="date">Just now</span>
+                                            </div>
+                                            <div class="text">
+                                                Elliot you are always so right :)
+                                            </div>
+                                            <div class="actions">
+                                                <a class="reply" one-link-mark="yes">回复</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="comment">
-                            <a class="avatar" one-link-mark="yes">
-                                <img src="http://lorempixel.com/100/100/">
-                            </a>
-                            <div class="content">
-                                <a class="author" one-link-mark="yes">Joe Henderson</a>
-                                <div class="metadata">
-                                    <span class="date">5 days ago</span>
-                                </div>
-                                <div class="text">
-                                    Dude, this is awesome. Thanks so much
-                                </div>
-                                <div class="actions">
-                                    <a class="reply" one-link-mark="yes">回复</a>
+                            <div class="comment">
+                                <a class="avatar" one-link-mark="yes">
+                                    <img src="http://lorempixel.com/100/100/">
+                                </a>
+                                <div class="content">
+                                    <a class="author" one-link-mark="yes">Joe Henderson</a>
+                                    <div class="metadata">
+                                        <span class="date">5 days ago</span>
+                                    </div>
+                                    <div class="text">
+                                        Dude, this is awesome. Thanks so much
+                                    </div>
+                                    <div class="actions">
+                                        <a class="reply" one-link-mark="yes">回复</a>
+                                    </div>
                                 </div>
                             </div>
+
                         </div>
 
                     </div>
                 </div>
                 <!--ui form 表格样式-->
-                <div class="ui form">
+                <div class="ui form" id="comment-form">
                     <input type="text" name="blog.id" th:value="${blog.id}">
                     <input type="text" name="parentComment.id" th:value="-1">
                     <div class="field">
@@ -430,6 +435,42 @@
        }
        
     });
+    
+    function postData() {
+        $('#comment-container').load(/*[[/comments]]*/"",{
+            "parentComment.id" :$("[name='parentComment.id']").val(),
+            "blog.id":$("[name='blog.name']").val(),
+            "nickname":$("[name='nickname']").val(),
+            "email":$("[name='email']").val(),
+            "content":$("[name='content']").val
+        }),function (responseTxt,statusTxt,xhr) {
+            // 回调方法
+            // 滚动到评论区域 时间500
+            $(window).scrollTo($('#comment-container'),500);
+            
+            clearContent();
+            
+        };
+    }
+    
+    function clearContent() {
+        $("[name='content']").val('');
+        // parentComment.id点击回复的时候才给它赋值
+        $("[name='parentComment.id']").val('-1');
+        $("[name='content']").attr("placeholder","请输入评论信息...");
+    }
+
+    function reply(obj) {
+        // data-commentid 这里不用写前面的data-
+        // 不用驼峰，因为data 里面有大写 获取不到值
+        var commentId=$(obj).data('commentid');
+        var commentNickName=$(obj).data('commentnickname');
+        $("[name='content']").attr("placeholder","@"+commentNickName).focus();
+
+        $("[name='parentComment.id']").val(commentId);
+
+        $(window).scrollTo($('#comment-form'),500);
+    }
 
 </script>
 </body>
