--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -25,7 +25,7 @@
 
             <div class="right item m-mobile-hide">
                 
-                <form class="search" action="#" th:action="@{/search}" method="post" target="_blank">
+                <form id="search" action="#" th:action="@{/search}" method="post" target="_blank">
                     <div class="ui icon inverted transparent input">
                         <input type="text" placeholder="Search..." name="query" th:value="${query}">
                         <!--老师的，点击i标签 没有效果..-->
