修改javascript中写错的comment地址

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -437,7 +437,7 @@
     });
     
     function postData() {
-        $('#comment-container').load(/*[[/comments]]*/"",{
+        $('#comment-container').load(/*[[@{/comments}]]*/"",{
             "parentComment.id" :$("[name='parentComment.id']").val(),
             "blog.id":$("[name='blog.name']").val(),
             "nickname":$("[name='nickname']").val(),
