--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -157,7 +157,10 @@
                                     <img src="http://lorempixel.com/100/100/" th:src="@{${comment.avatar}}">
                                 </a>
                                 <div class="content">
-                                    <a class="author" one-link-mark="yes" th:text="${comment.nickname}">Matt</a>
+                                    <a class="author" one-link-mark="yes">
+                                        <span th:text="${comment.nickname}">Matt</span>
+                                        <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">博主</div>
+                                    </a>
                                     <div class="metadata">
                                         <span class="date" th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}">Today at 5:42PM</span>
                                     </div>
@@ -178,6 +181,7 @@
 
                                             <a class="author" one-link-mark="yes">
                                                 <span th:text="${reply.nickname}">Matt</span>
+                                                <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${reply.adminComment}">博主</div>
                                                 <span>&nbsp;</span>
                                                 <span th:text="|@ ${reply.parentComment.nickname}|" class="m-teal">@小白</span>
 
@@ -270,13 +274,13 @@
                             <!--ui icon input 输入框加图标-->
                             <div class="ui left icon input">
                                 <i class="user icon"></i>
-                                <input type="text" name="nickname" placeholder="姓名">
+                                <input type="text" name="nickname" placeholder="姓名" th:value="${session.user}!=null? ${session.user.nickname}">
                             </div>
                         </div>
                         <div class="field m-mobile-wide margin-bottom-small">
                             <div class="ui left icon input">
                                 <i class="mail icon"></i>
-                                <input type="text" name="email" placeholder="邮箱">
+                                <input type="text" name="email" placeholder="邮箱" th:value="${session.user}!=null? ${session.user.email}">
                             </div>
                         </div>
                         <div class="field m-mobile-wide margin-bottom-small">
