--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -19,7 +19,7 @@
             <h2 class="ui teal header item">Blog</h2>
             <a th:href="@{/}" class="m-item item m-mobile-hide" th:classappend="${n==1}? 'active'"><i class="home icon"></i>首页</a>
             <a th:href="@{/types/-1}" class="m-item item m-mobile-hide" th:classappend="${n==2}? 'active'"><i class="idea icon"></i>分类</a>
-            <a th:href="@{/tag/-1}" class="m-item item m-mobile-hide" th:classappend="${n==3}? 'active'"><i class="target icon"></i>标签</a>
+            <a th:href="@{/tags/-1}" class="m-item item m-mobile-hide" th:classappend="${n==3}? 'active'"><i class="target icon"></i>标签</a>
             <a th:href="@{/archives/-1}" class="m-item item m-mobile-hide" th:classappend="${n==4}? 'active'"><i class="clone icon"></i>归档</a>
             <a th:href="@{/about}" class="m-item item m-mobile-hide" th:classappend="${n==5}? 'active'"><i class="info icon"></i>关于我</a>
 
