--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -122,7 +122,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="column">
-                                        <a th:href="@{/tags/{id}(id=${tag.id})}" class="ui basic teal left pointing label m-padded-mini m-text-thin" th:each="tag : ${blog.tags}" th:text="${tag.name}">方法论</a>
+                                        <a th:href="@{/tags/{id}(id=${tag.id})}" class="ui basic left pointing label m-padded-mini m-text-thin" th:each="tag : ${blog.tags}" th:text="${tag.name}" th:classappend="${tag.id==activeTagId}? 'teal'">方法论</a>
                                     </div>
 
                                 </div>
