使用国际化和#{}读取配置

--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -74,7 +74,8 @@
             <div class="three wide column">
                 <h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
                 <div class="ui inverted link list">
-                    <a href="#" class="item">用户故事</a>
+                    <!-- #{} 取配置内容 -->
+                    <a href="#" class="item" th:text="#{index.email}">用户故事</a>
                     <a href="#" class="item">用户故事</a>
                     <a href="#" class="item">用户故事</a>
                 </div>
