--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -349,14 +349,14 @@
                                     <i class="idea icon"></i>分类
                                 </div>
                                 <div class="right aligned column ">
-                                    <a href="#" target="_blank">more <i class="angle double right icon"></i></a>
+                                    <a th:href="@{/types/-1 }" target="_blank">more <i class="angle double right icon"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="ui teal segment">
                             <!--填充fluid-->
                             <div class="ui fluid vertical menu">
-                                <a href="#" class="item" th:each="type : ${types}">
+                                <a th:href="@{/types/{id}(id=${type.id}) }" class="item" th:each="type : ${types}">
                                     <span th:text="${type.name}">学习日志</span>
                                     <!--left pointing 左边小角-->
                                     <div class="ui teal basic left pointing label" th:text="${#arrays.length(type.blogs)}">13</div>
@@ -389,13 +389,13 @@
                                     <i class="tags icon"></i>标签
                                 </div>
                                 <div class="right aligned column">
-                                    <a href="#" target="_blank">more<i class="angle double right icon"></i></a>
+                                    <a th:href="@{/tags/-1 }" target="_blank">more<i class="angle double right icon"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="ui teal segment">
-                            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny" th:each="tag : ${tags}">
+                            <a th:href="@{/tags/{id}(id=${tag.id}) }" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny" th:each="tag : ${tags}">
                                 <span th:text="${tag.name}">方法论</span>
                                 <div class="detail" th:text="${#arrays.length(tag.blogs)}">2</div>
                             </a>
