--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -101,31 +101,34 @@
                     <div class="ui basic teal left pointing label" th:each="tag :${blog.tags}" th:text="${tag.name}">零碎</div>
                 </div>
                 <!--赞赏-->
-                <div class="ui center aligned basic segment">
-                    <!--circular圆角-->
-                    <button id="payButton" class="ui orange basic circular button">赞赏</button>
-                </div>
-                <div class="ui payQR flowing popup transition hidden">
-                    <div class="ui orange basic label">
-                        <!--images 默认字体大小为0 设置继承上级-->
-                        <div class="ui images" style="font-size: inherit">
-                            <div class="image">
-                                <img src="../static/images/avatar.jpg" th:src="@{/images/avatar.jpg}" alt="" class="ui rounded bordered image" style="width: 120px">
-                                <div>支付宝</div>
-                            </div>
-                            <div class="image">
-                                <img src="../static/images/avatar.jpg" th:src="@{/images/avatar.jpg}" alt="" class="ui rounded bordered image" style="width: 120px">
-                                <div>微信</div>
+                <div th:if="${blog.appreciation}">
+                    <div class="ui center aligned basic segment">
+                        <!--circular圆角-->
+                        <button id="payButton" class="ui orange basic circular button">赞赏</button>
+                    </div>
+                    <div class="ui payQR flowing popup transition hidden">
+                        <div class="ui orange basic label">
+                            <!--images 默认字体大小为0 设置继承上级-->
+                            <div class="ui images" style="font-size: inherit">
+                                <div class="image">
+                                    <img src="../static/images/avatar.jpg" th:src="@{/images/avatar.jpg}" alt="" class="ui rounded bordered image" style="width: 120px">
+                                    <div>支付宝</div>
+                                </div>
+                                <div class="image">
+                                    <img src="../static/images/avatar.jpg" th:src="@{/images/avatar.jpg}" alt="" class="ui rounded bordered image" style="width: 120px">
+                                    <div>微信</div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                
 
 
             </div>
             <!--博客信息-->
             <!--positive 偏绿的背景色-->
-            <div class="ui attached positive message">
+            <div class="ui attached positive message" th:if="${blog.shareStatement}">
                 <!--middle aligned 垂直方向居中 -->
                 <div class="ui middle aligned grid">
                     <div class="eleven wide column">
@@ -145,7 +148,7 @@
 
             </div>
             <!--留言区域-->
-            <div  class="ui bottom attached segment">
+            <div  class="ui bottom attached segment" th:if="${blog.commentabled}">
                 <!--将这个comment-container动态加载-->
                 <div id="comment-container" class="ui teal segment">
                     <div th:fragment="commentList">
