--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
 
     </nav>
 <!--中间内容-->
-    <div class="m-container m-padded-tb-big">
+    <div class="m-container m-padded-tb-big animated fadeIn">
         <!--semantic 容器 有响应式效果-->
         <div class="ui container">
 
